Refactor tool handling and improve job submission; adjust batch sizes, enhance error handling, and implement deferred results for asynchronous processing